--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,9 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-org.gradle.parallel=true
-
-# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
+# Root project settings
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=false
 org.gradle.configuration-cache=false
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.4
-loader_version=0.18.1
-loom_version=1.13-SNAPSHOT
-
-# Mod Properties
-mod_version=1.0.4
+# Mod Properties (inherited by subprojects if not overridden)
+mod_version=1.0.5
 maven_group=pay.everyone.mod
 archives_base_name=pay-everyone
-
-# Dependencies
-fabric_version=0.119.4+1.21.4
