--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
-//   All versions:    ./gradlew build
-//   Legacy only:     ./gradlew :legacy:build
-//   Modern only:     ./gradlew :modern:build
-// Output JARs are placed in each subproject's build/libs/ directory
+# Root project settings
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=false
+org.gradle.configuration-cache=false
 
-plugins {
-    id 'base'
-}
-
+# Mod Properties (inherited by subprojects if not overridden)
+mod_version=1.0.5
+maven_group=pay.everyone.mod
+archives_base_name=pay-everyone
