--- a/build.gradle
+++ b/build.gradle
@@ -1,117 +1,8 @@
+//   All versions:    ./gradlew build
+//   Legacy only:     ./gradlew :legacy:build
+//   Modern only:     ./gradlew :modern:build
+// Output JARs are placed in each subproject's build/libs/ directory
+
 plugins {
-	id 'fabric-loom' version "${loom_version}"
-	id 'maven-publish'
-}
-
-// Load version-specific properties if MC_VERSION is set
-if (project.hasProperty('MC_VERSION')) {
-	def mcVersion = project.property('MC_VERSION').toString()
-	def versionFile = file("versions/${mcVersion}.properties")
-	if (versionFile.exists()) {
-		def versionProps = new Properties()
-		versionFile.withInputStream { versionProps.load(it) }
-		versionProps.each { key, value ->
-			project.ext.set(key, value)
-		}
-		println "Building for Minecraft ${project.minecraft_version}"
-	} else {
-		throw new GradleException("Version file not found: versions/${mcVersion}.properties")
-	}
-}
-
-version = project.mod_version
-group = project.maven_group
-
-base {
-	archivesName = "${project.archives_base_name}-${project.minecraft_version}"
-}
-
-repositories {
-
-}
-
-loom {
-	splitEnvironmentSourceSets()
-
-	mods {
-		"pay-everyone" {
-			sourceSet sourceSets.main
-			sourceSet sourceSets.client
-		}
-	}
-
-}
-
-dependencies {
-	// To change the versions see the gradle.properties file
-	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings loom.officialMojangMappings()
-	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
-
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
-}
-
-processResources {
-	inputs.property "version", project.version
-	
-	// Determine Minecraft version range based on the version being built
-	def minecraftVersionRange
-	if (project.hasProperty('MC_VERSION')) {
-		def mcVersion = project.property('MC_VERSION').toString()
-		// For 1.21.1, only support that specific version
-		if (mcVersion == "1.21.1") {
-			minecraftVersionRange = "1.21.1"
-		} else {
-			// For other versions, use the range 1.21.4-1.21.10
-			minecraftVersionRange = ">=1.21.4 <=1.21.10"
-		}
-	} else {
-		// Default to the full range if no MC_VERSION is specified
-		minecraftVersionRange = ">=1.21.4 <=1.21.10"
-	}
-	
-	inputs.property "minecraft_version_range", minecraftVersionRange
-	println "Setting Minecraft version range to: ${minecraftVersionRange}"
-
-	filesMatching("fabric.mod.json") {
-		expand([
-			"version": project.version,
-			"minecraft_version_range": minecraftVersionRange
-		])
-	}
-}
-
-tasks.withType(JavaCompile).configureEach {
-	it.options.release = 21
-}
-
-java {
-
-	withSourcesJar()
-
-	sourceCompatibility = JavaVersion.VERSION_21
-	targetCompatibility = JavaVersion.VERSION_21
-}
-
-jar {
-	inputs.property "archivesName", project.base.archivesName
-
-	from("LICENSE") {
-		rename { "${it}_${inputs.properties.archivesName}"}
-	}
-}
-
-// configure the maven publication
-publishing {
-	publications {
-		create("mavenJava", MavenPublication) {
-			artifactId = project.archives_base_name
-			from components.java
-		}
-	}
-	repositories {
-
-	}
+    id 'base'
 }
