Update to v1.0.6: Bug fixes and code optimizations
- Remove dead code (RenderContext.java, unused VersionCompat rendering methods)
- Add drawBorder() helper to consolidate duplicate border drawing code
- Optimize PlayerListWidget to refresh on tick instead of every render
- Fix double sent text inputs in legacy build
- Fix tab scan infinite loop bug in legacy build

--- a/legacy/build.gradle
+++ b/legacy/build.gradle
@@ -62,6 +62,7 @@ task copySharedClientSources(type: Copy) {
     from rootProject.file('src/client/java')
     into "${buildDir}/generated/shared/client/java"
     exclude '**/compat/RenderHelper.java'
+    exclude '**/mixin/client/InventoryScreenMixin.java'
 }
 
 compileClientJava.dependsOn copySharedClientSources
